fix: 확대 삭제 시 overflow 생기는 문제 수정

--- a/src/page/ment/ment.module.css
+++ b/src/page/ment/ment.module.css
@@ -45,6 +45,11 @@
 
     .imageWrap {
         margin-top: 5vh;
+        position: relative;
+        width: 100vw;
+        overflow-x: hidden;
+        display: flex;
+        align-items: center;
         height: max-content;
         
         .middleImage {
